--- a/Contacts/Views/Home/Index.cshtml
+++ b/Contacts/Views/Home/Index.cshtml
@@ -3,29 +3,23 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Contacts ASP.NET</h1>
+    <p class="lead">This is a simple contacts application built by <a href="https://github.com/dmashuda">Daniel Mashuda</a> as part of a Computer Science independent study</p>
+    <p><a href="https://github.com/dmashuda/ContactsDotNet" class="btn btn-primary btn-lg">Github &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>York College of Pennsylvania</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+           Some Text about the CS Department Goes here
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://www.ycp.edu">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>York College Computer Science</h2>
+        <p>Some text about CS Goes here</p>
+        <p><a class="btn btn-default" href="http://www.ycp.edu/academics/academic-departments/physical-sciences/programs-in-engineering-and-computer-science/computer-science/">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
 </div>
