--- a/Contacts/Views/Shared/_Layout.cshtml
+++ b/Contacts/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("My Contacts", "Index", "Contacts")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Contacts ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Daniel Mashuda</p>
         </footer>
     </div>
 
