--- a/Contacts/Views/Contacts/Index.cshtml
+++ b/Contacts/Views/Contacts/Index.cshtml
@@ -12,13 +12,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayNameFor(model => model.ContactId)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MiddleName)
+            @Html.ActionLink("First Name", "Index", new { sortOrder = ViewBag.FirstNameSortParam })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.ActionLink("Middle Name", "Index", new { sortOrder = ViewBag.MiddleNameSortParam })
+        </th>
+        <th>
+            @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.LastNameSortParam })
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PhoneNumber)
@@ -31,6 +34,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.ContactId)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.FirstName)
         </td>
