--- a/Contacts/Views/Contacts/Duplicates.cshtml
+++ b/Contacts/Views/Contacts/Duplicates.cshtml
@@ -3,13 +3,13 @@
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Contacts";
 }
 
-<h2>Index</h2>
+<h2>Contacts</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create") | @Html.ActionLink("View Duplicates", "Duplicates") 
+    @Html.ActionLink("Create New", "Create")
 </p>
 
 @using (Html.BeginForm("Index", "Student", FormMethod.Get))
@@ -23,22 +23,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ContactId)
-        </th>
-        <th>
             @Html.ActionLink("First Name", "Index", new { sortOrder = ViewBag.FirstNameSortParam, currentFilter=ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.ActionLink("Middle Name", "Index", new { sortOrder = ViewBag.MiddleNameSortParam, currentFilter=ViewBag.CurrentFilter })
-        </th>
-        <th>
             @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.LastNameSortParam, currentFilter=ViewBag.CurrentFilter })
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
         </th>
         <th></th>
     </tr>
@@ -46,34 +34,20 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.ContactId)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MiddleName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.LastName)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ContactId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ContactId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ContactId })
-        </td>
     </tr>
 }
+
 </table>
 
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div
 <br />
-
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
 @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
