--- a/Contacts/Views/Contacts/Index.cshtml
+++ b/Contacts/Views/Contacts/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model PagedList.IPagedList<Contacts.Models.Contact>
-@using PagedList.Mvc;
-<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
+﻿@model IEnumerable<Contacts.Models.Contact>
 
 @{
     ViewBag.Title = "Index";
@@ -9,30 +7,21 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create") | @Html.ActionLink("View Duplicates", "Duplicates") 
+    @Html.ActionLink("Create New", "Create")
 </p>
-
-@using (Html.BeginForm("Index", "Student", FormMethod.Get))
-{
-    <p>
-        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
-        <input type="submit" value="Search" />
-    </p>
-}
-
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.ContactId)
         </th>
         <th>
-            @Html.ActionLink("First Name", "Index", new { sortOrder = ViewBag.FirstNameSortParam, currentFilter=ViewBag.CurrentFilter })
+            @Html.ActionLink("First Name", "Index", new { sortOrder = ViewBag.FirstNameSortParam })
         </th>
         <th>
-            @Html.ActionLink("Middle Name", "Index", new { sortOrder = ViewBag.MiddleNameSortParam, currentFilter=ViewBag.CurrentFilter })
+            @Html.ActionLink("Middle Name", "Index", new { sortOrder = ViewBag.MiddleNameSortParam })
         </th>
         <th>
-            @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.LastNameSortParam, currentFilter=ViewBag.CurrentFilter })
+            @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.LastNameSortParam })
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PhoneNumber)
@@ -70,10 +59,5 @@
         </td>
     </tr>
 }
+
 </table>
-
-<br />
-
-Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-
-@Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
